spade-tests/src/snapshots/spade_tests__typeinference__inverse_order_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 2] {
    x[2..0]
}


error: The end of the range must be after the start
  ┌─ testinput:2:5
  │
2 │     x[2..0]
  │     ^^^^^^^
  │     │ │  │
  │     │ │  End was inferred to be 0
  │     │ Start was inferred to be 2
  │     Range end before start
  │
  = help: If you want to swap the order of the elements, you can use `std::conv::flip_array`

error: Expected type [_; #uint], got [_; -2]
  ┌─ testinput:2:5
  │
2 │     x[2..0]
  │     ^^^^^^^
  │     │
  │     Expected [_; #uint], got [_; -2]
  │     The error occurred when unifying types here
  │
  = note: Expected: #uint
                in: [_; #uint]
               Got: -2
                in: [_; -2]
